--- a/jira/src/components/Header/Slide/Slide.module.css
+++ b/jira/src/components/Header/Slide/Slide.module.css
@@ -1,6 +1,6 @@
 .sidenav {
   min-height: 100vh;
-  width: 0;
+  width: 178px;
   position: fixed;
   z-index: 1;
   top: 0;
@@ -16,6 +16,12 @@
   right: 25px;
   font-size: 36px;
   margin-left: 50px;
+}
+.sidenav ul li {
+  list-style: none;
+}
+.sidenav ul li a {
+  text-decoration: none;
 }
 
 .listProject svg {
