--- a/jira/src/components/Header/Slide/Slide.module.scss
+++ b/jira/src/components/Header/Slide/Slide.module.scss
@@ -3,7 +3,7 @@ $color-navbar: #f4f5f7;
 
 .sidenav {
     min-height: 100vh;
-    width: 0;
+    width: 178px;
     position: fixed;
     z-index: 1;
     top: 0;
@@ -20,13 +20,21 @@ $color-navbar: #f4f5f7;
         font-size: 36px;
         margin-left: 50px;
     }
+    ul {
+        li {
+            list-style: none;
+            a {
+                text-decoration: none;
+            }
+        }
+    }
 }
 
 .listProject {
     svg {
         margin-right: 0.5rem;
     }
-    
+
     a {
         text-decoration: none;
         font-size: 16px;
