--- a/jira/src/components/Header/Slide/Slide.module.css
+++ b/jira/src/components/Header/Slide/Slide.module.css
@@ -1,6 +1,6 @@
 .sidenav {
   min-height: 100vh;
-  width: 178px;
+  width: 0;
   position: fixed;
   z-index: 1;
   top: 0;
@@ -9,59 +9,4 @@
   overflow-x: hidden;
   transition: 0.5s;
   padding-top: 60px;
-}
-.sidenav .closebtn {
-  position: absolute;
-  top: 0;
-  right: 25px;
-  font-size: 36px;
-  margin-left: 50px;
-}
-.sidenav ul li {
-  list-style: none;
-}
-.sidenav ul li a {
-  text-decoration: none;
-}
-
-.listProject svg {
-  margin-right: 0.5rem;
-}
-.listProject a {
-  text-decoration: none;
-  font-size: 16px;
-  color: #00152a;
-  display: block;
-  transition: 0.3s;
-}
-
-.menu {
-  transition: 0.5s;
-  padding-top: 1rem;
-  width: 252px;
-  height: 100vh;
-  background-color: #f4f5f7;
-  color: #00152a;
-  display: flex;
-  justify-content: center;
-}
-.menu .logo {
-  display: grid;
-  grid-template-columns: 30% 80%;
-  place-items: center;
-  padding: 1rem 0;
-  cursor: pointer;
-}
-.menu .item {
-  padding-top: 1rem;
-  cursor: pointer;
-}
-
-@media screen and (max-height: 450px) {
-  .sidenav {
-    padding-top: 15px;
-  }
-  .sidenav a {
-    font-size: 18px;
-  }
 }/*# sourceMappingURL=Slide.module.css.map */
