--- a/jira/src/components/Header/Slide/Slide.module.css
+++ b/jira/src/components/Header/Slide/Slide.module.css
@@ -1,12 +1,23 @@
 .sidenav {
-  min-height: 100vh;
   width: 0;
+  min-height: 100vh;
   position: fixed;
   z-index: 1;
+  overflow-x: hidden;
   top: 0;
   left: 0;
   background-color: #00152a;
-  overflow-x: hidden;
   transition: 0.5s;
-  padding-top: 60px;
+}
+.sidenav ul li {
+  list-style: none;
+  padding: 0.5rem 0;
+}
+.sidenav ul li a {
+  font-size: 1.1rem;
+  text-decoration: none;
+  color: #f4f5f7;
+}
+.sidenav ul li a span {
+  padding: 0 1rem;
 }/*# sourceMappingURL=Slide.module.css.map */
