--- a/jira/src/components/Header/Slide/Slide.module.scss
+++ b/jira/src/components/Header/Slide/Slide.module.scss
@@ -1,13 +1,26 @@
 @import "../../../variable";
 .sidenav {
-    min-height: 100vh;
     width: 0;
+    min-height: 100vh;
     position: fixed;
     z-index: 1;
+    overflow-x: hidden;
     top: 0;
     left: 0;
     background-color: $color-menu;
-    overflow-x: hidden;
     transition: 0.5s;
-    padding-top: 60px;
+    ul {
+        li {
+            list-style: none;
+            padding: 0.5rem 0;
+            a {
+                font-size: 1.1rem;
+                text-decoration: none;
+                color: $color-navbar;
+                span{
+                    padding: 0 1rem;
+                }
+            }
+        }
+    }
 }
